<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="dinoDesc">Description Detail</string>
    <string name="dinoPeriod">Periode Dino</string>
    <string name="dinoPhysicalCharacteristics">Karakter Fisik</string>
    <string name="dinoHabitat">Habitat</string>
    <string name="dinoBehavior">Behavior</string>
    <string name="dinoClassification">Klasifikasi</string>
    <!-- Dino Families Name-->
    <string name="sauropoda_name">Sauropoda Families</string>


    <string name="developer_name">Hanny Yosephine</string>
    <string name="developer_description">Informatika 21</string>
    <string name="additional_info">Masih menagmbil mata kuliah PAM dan ikut kelas reguler.</string>


</resources>